Update ThanhToanInfo & CrystalReport1.rpt, fix something else

--- a/Source/PETFTMS_2.0dev-sql/PETFTMS/PETFTMS.csproj
+++ b/Source/PETFTMS_2.0dev-sql/PETFTMS/PETFTMS.csproj
@@ -104,6 +104,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CrystalReport1.rpt</DependentUpon>
       <SubType>Component</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="DAT\Connect.cs">
       <SubType>Component</SubType>
@@ -193,6 +194,7 @@
     <EmbeddedResource Include="CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
